#==============================================================================
# The configuration files
#==============================================================================
pkgsysconfdir = $(sysconfdir)/$(PACKAGE)/config
dist_pkgsysconf_DATA = \
	graphism.conf opencity.xml graphism.xml
