#==============================================================================
# Documentation
#==============================================================================
EXTRA_DIST = $(docs_DATA)

docsdir = $(datadir)/doc/$(PACKAGE)
docs_DATA = \
	../COPYRIGHT ../README ../AUTHORS ../INSTALL \
	FAQ.txt FAQ_it.txt README_it.txt
