#==============================================================================
# Platform independant sound files
#==============================================================================
pkgdatadir = $(datadir)/opencity/$(subdir)
dist_pkgdata_DATA = \
	destroy.wav \
	eline2.wav \
	eline.wav \
	eplant.wav \
	park.wav \
	rci.wav \
	road.wav \
	sound.m3u \
	terrain.wav \
	wroum.wav
