#==============================================================================
# Platform independant heightmaps files
#==============================================================================
pkgdatadir = $(datadir)/opencity/$(subdir)
dist_pkgdata_DATA = \
	Athenes-1024x1024.png \
	Athenes-1024x1024.xml \
	Athenes-51x51.png \
	Athenes-51x51.xml \
	Dakar-51x51.png \
	Dakar-51x51.xml \
	Ibiza-101x101.png \
	Ibiza-101x101.xml \
	Istanbul-1025x1025.png \
	Istanbul-1025x1025.xml \
	Mallorca-93x61.png \
	Mallorca-93x61.xml \
	Palermo-51x51.png \
	Palermo-51x51.xml \
	Sao_Tome-101x101.png \
	Sao_Tome-101x101.xml \
	Strasbourg-1025x1025.png \
	Strasbourg-1025x1025.xml \
	Woodstock-51x51.png \
	Woodstock-51x51.xml
