#==============================================================================
# Makefile.am for libsharpplus.a
# $Id$
#==============================================================================
SUBDIRS = System

noinst_LTLIBRARIES = libsharpplus.la

libsharpplus_la_SOURCES =

libsharpplus_la_LIBADD = \
	System/libSystem.la

