#==============================================================================
# Makefile.am for libsharpplus.a
# $Id$
#==============================================================================
SUBDIRS = System

noinst_LTLIBRARIES = libsharpplus.la

libsharpplus_la_SOURCES =

noinst_HEADERS = \
	SharpPlus.h

libsharpplus_la_LIBADD = \
	System/libSystem.la

