AM_CPPFLAGS = \
	-I@top_srcdir@/src/mapgen/ \
	-I@top_srcdir@/src/mapgen/filter \
	-I@top_srcdir@/src/mapgen/generator \
	-I@top_srcdir@/src


noinst_LIBRARIES = libmapgen.a


libmapgen_a_SOURCES = \
map.cpp \
mapmaker.cpp \
filter/filter.cpp \
filter/flattern.cpp \
filter/gaussblur.cpp \
filter/normalize.cpp \
generator/diamon.cpp \
generator/generator.cpp


noinst_HEADERS = \
map.h \
mapmaker.h \
filter/filter.h \
filter/flattern.h \
filter/gaussblur.h \
filter/normalize.h \
generator/diamon.h \
generator/generator.h


